tests/neg/unroll-illegal3.check
-- [E207] Declaration Error: tests/neg/unroll-illegal3.scala:7:31 ------------------------------------------------------
7 |    def foo(s: String, @unroll y: Boolean) = s + y // error
  |                               ^
  |                               Can not unroll parameters of method foo: it is not final
-- [E207] Declaration Error: tests/neg/unroll-illegal3.scala:12:29 -----------------------------------------------------
12 |  def foo(s: String, @unroll y: Boolean) = s + y // error
   |                             ^
   |                             Can not unroll parameters of method foo: it is not final
-- [E207] Declaration Error: tests/neg/unroll-illegal3.scala:16:29 -----------------------------------------------------
16 |  def foo(s: String, @unroll y: Boolean): String // error
   |                             ^
   |                             Can not unroll parameters of method foo: it must not be abstract
